hydra/test/test_examples/type_errors/list_index2.tpc
tele bool[10] x;
init {
    bit<32> y = x[1];
}
telemetry {}
check {}